cabal-version: 2.2
name:          euler-events-hs
version:       0.0.8
synopsis:      Events library for euler
homepage:      https://bitbucket.org/juspay/euler-events-hs
license:
author:        Juspay Technologies Pvt Ltd
maintainer:    puneet.pahuja@juspay.in
copyright:     (C) Juspay Technologies Pvt Ltd 2019-2020
category:      Euler
build-type:    Simple
tested-with:   GHC ==8.6.5

source-repository head
  type:     git
  location: https://bitbucket.org/juspay/euler-events-hs

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:      base >=4.13 && <5
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Euler.Events.Class
    Euler.Events.Constants
    Euler.Events.Logger.Stdout
    Euler.Events.MetricAPI
    Euler.Events.MetricLogger.Prometheus
    Euler.Events.Network
    Euler.Events.Types.Event
    Euler.Events.Types.Metric
    Euler.Events.Types.Order
    Euler.Events.Types.Timer
    Euler.Events.Types.Txn
    Euler.Events.Types.TxnCardInfo
    Euler.Events.Util.Prometheus
    Euler.Events.Types.MandateWorkflow
  -- Euler.Events.Logger.Kafka
  other-modules:   Euler.Events.Util
  hs-source-dirs:  src
  build-depends:
    , aeson
    , bytestring
    , clock
    , containers
    , deepseq
    , either
    , http-conduit
    , http-types
    , prometheus-client
    , prometheus-metrics-ghc
    , prometheus-proc
    , stm-containers
    , text
    , time
    , unix
    , wai
    , wai-middleware-prometheus
    , warp

-- , either
-- , hspec
-- , http-conduit
--needed for tests hspec http-conduit either
-- , deepseq
-- , hw-kafka-client
-- , proto3-suite >=0.4.0.0
-- , proto3-wire
test-suite tests
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    EventSpec
    MetricApiSpec
    PrometheusSpec

  build-depends:
    , aeson
    , async
    , bytestring
    , either
    , euler-events-hs
    , hspec
    , time
    , prometheus-client
    , wai
    , wai-middleware-prometheus
    , warp

  hs-source-dirs: test

test-suite metricapi-doctest
  type: exitcode-stdio-1.0
  main-is: test/Doctest.hs
  ghc-options: -threaded
  build-depends:
    , base >=4.13 && <5
    , doctest >=0.12 && <0.17